--- a/package.json
+++ b/package.json
@@ -75,9 +75,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "msw": "^2.7.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.12.3",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
