--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'"
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -63,7 +66,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/d3-scale": "^4.0.8",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.8.6",
     "@types/papaparse": "^5.3.15",
     "@types/pdf-parse": "^1.1.5",
@@ -74,10 +82,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.7.5",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.12.3",
